# cpp-game-old

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.alpine-3  README.md  conanfile.txt
include/: Animation.hpp  Application.hpp  BoundingBox.hpp  BrdDebugConfig.hpp  Button.hpp  Category.hpp  Command.hpp  CommandQueue.hpp  Component.hpp  Container.hpp  DataTables.hpp  DeathState.hpp  Entity.hpp  ForegroundManager.hpp  Game.hpp  GameState.hpp  LevelManager.hpp  LevelObject.hpp  MenuState.hpp  PauseState.hpp  Person.hpp  Pickup.hpp  Projectile.hpp  ResourceHolder.hpp  ResourceIdentifiers.hpp  SceneNode.hpp  State.hpp  StateIdentifiers.hpp  StateStack.hpp  TextNode.hpp  TileLayout.hpp  TitleState.hpp  User.hpp  Utility.hpp  World.hpp  bot.h
include/bot/: classai.h  exceptions.h  functions.h  layers.h  matrix.h  networks.h
media/: 2.tmx  ZOA_Tileset.tsx  back2.tsx  building.tsx  map-with-objects.tmx  test-map.tmx
media/xml/map/: map_ex.tmx  map_ex2.tmx
scripts/: build-first.sh  docker.sh  lint.sh
src/: Animation.cpp  Application.cpp  BoundingBox.cpp  Button.cpp  Command.cpp  CommandQueue.cpp  Component.cpp  Container.cpp  DataTables.cpp  DeathState.cpp  Entity.cpp  ForegroundManager.cpp  Game.cpp  GameState.cpp  LevelManager.cpp  LevelObject.cpp  MenuState.cpp  PauseState.cpp  Person.cpp  Pickup.cpp  Projectile.cpp  SceneNode.cpp  State.cpp  StateStack.cpp  TextNode.cpp  TileLayout.cpp  TitleState.cpp  User.cpp  Utility.cpp  World.cpp  bot.cpp  main.cpp
src/bot/: classai.cpp  layers.cpp  matrix.cpp  networks.cpp
